--- a/src/client/modules/my/app/app.html
+++ b/src/client/modules/my/app/app.html
@@ -4,7 +4,7 @@
     </template>
 
     <div
-        class="slds-grid slds-grid_align-center slds-gutters slds-p-around_x-large"
+        class="slds-grid slds-grid_align-center slds-wrap slds-gutters slds-p-around_x-large"
     >
         <div
             class="slds-col slds-large-size_6-of-12 slds-medium-size_8-of-12 slds-size_12-of-12"
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <template if:false={isSubmitted}>
-                    <form onsubmit={checkinHandler}>
+                    <form class= "slds-border_top slds-p-top_x-large" onsubmit={checkinHandler}>
                         <my-custom-input
                             name="Name"
                             type="text"
