--- a/src/client/modules/my/app/app.html
+++ b/src/client/modules/my/app/app.html
@@ -77,7 +77,7 @@
                             onformchange={formChange}
                         ></my-custom-input>
 
-                        <div class="slds-p-top_medium">
+                        <div class="slds-p-around_medium">
                             <button
                                 type="submit"
                                 class="slds-button slds-card__footer-action slds-button_brand margin-auto"
